--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>macuEnvios – Entregamos confianza</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles_macuEnvios.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,6 +16,11 @@
         <p class="slogan">Entregamos más que paquetes, entregamos confianza</p>
       </div>
     </div>
+    <!-- Menú hamburguesa para móvil -->
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+    <label for="nav-toggle" class="nav-toggle-label">
+      <span></span>
+    </label>
     <nav>
       <ul>
         <li><a href="#inicio" aria-label="Inicio">🏠 Inicio</a></li>
