--- a/index.html
+++ b/index.html
@@ -142,20 +142,7 @@
     <p>&copy; 2025 macuEnvios. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="script.js"></script>
-  <script>
-    // Cursor glow effect
-    const cursorGlow = document.getElementById('cursor-glow');
-    document.addEventListener('mousemove', (e) => {
-      cursorGlow.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
-      cursorGlow.style.opacity = '0.32';
-    });
-    document.addEventListener('mouseleave', () => {
-      cursorGlow.style.opacity = '0';
-    });
-    document.addEventListener('mouseenter', () => {
-      cursorGlow.style.opacity = '0.32';
-    });
-  </script>
+  <!-- Script funcional de la versión 14 -->
+  <script src="script_Version14.js"></script>
 </body>
 </html>
