--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </a>
           </li>
           <li>✉️ <a href="mailto:soporte@macuenvios.com">soporte@macuenvios.com</a></li>
-          <li>📍 macusani/JR.8 de diciembre barrio tupac</li>
+          <li>📍 macusani/jr.grau 212</li>
         </ul>
       </div>
     </section>
